--- a/layouts/partials/elements/content.html
+++ b/layouts/partials/elements/content.html
@@ -1,7 +1,7 @@
 {{- $currentLang := site.Language.Lang }}
-{{- partialCached "utils/css.html" (dict "context" . "filefolder" "overgo/config/" "filename" "colors" "inline" "true") "colors" -}}
-{{- partialCached "utils/css.html" (dict "context" . "filefolder" "overgo/config/" "filename" "typography" "inline" "true") "typography" -}}
-{{- partialCached "utils/css.html" (dict "context" . "filefolder" "overgo/tool/" "filename" "utilities" "inline" "true") "utilities" -}}
+{{- partialCached "utils/css.html" (dict "context" . "filefolder" "overgo/config" "filename" "colors" "inline" "true") "colors" -}}
+{{- partialCached "utils/css.html" (dict "context" . "filefolder" "overgo/config" "filename" "typography" "inline" "true") "typography" -}}
+{{- partialCached "utils/css.html" (dict "context" . "filefolder" "overgo/tool" "filename" "utilities" "inline" "true") "utilities" -}}
 {{- partialCached "utils/css.html" (dict "context" . "filefolder" "base" "filename" "layout" "inline" "true") "layout" -}}
 {{- partialCached "utils/css.html" (dict "context" . "filefolder" "base" "filename" "main" "inline" "true") "main" -}}
 {{- with (findRE "class=\"counter" .) -}}
