--- a/assets/css/overgo/base/base.css
+++ b/assets/css/overgo/base/base.css
@@ -67,8 +67,9 @@ body > main > * + * {
 // -------------------------
 */
 
-img {
-  max-width: 100%;
+img, picture, video, canvas, svg {
+  display: block;
+  max-inline-size: 100%;
   height: auto;
   vertical-align: middle;
   -ms-interpolation-mode: bicubic;
