--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <section class="wrapper padding-block pl-4">
-        {{ partialCached "elements/content.html" .Content .Content }}
+        {{ .Content }}
       </section>
       {{/*
       <hr class="divider">
