--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -118,18 +118,12 @@
     <a href="#footer">{{ i18n "nav-skiplinks-footer" }}</a>
   </div>
   {{ partialCached "utils/css.html" (dict "context" . "filefolder" "object" "filename" "form") "form" }}
-  {{- if (eq (getenv "HUGO_ENV") "splash") -}}
-  {{ partial "splash.html" }}
-  {{- else -}}
   <header id="header" class="header" aria-label="{{ i18n "aria-label-header" }}">
     {{- $baseURL := $.Site.BaseURL | default "/" -}}
     <div class="fg-wrapper grid-main align-items-stretch pb-1">
       <div class="flex align-items-center">
         <a href="{{ absLangURL "" }}" title="Accueil - {{ if .Site.Params.organisation }}{{ .Site.Params.organisation }}{{ else }}{{ .Site.Title }}{{ end }}" rel="home" class="site-logo">
-          <picture>
-            <source srcset="{{ $baseURL }}assets/images/logodark.svg" media="(prefers-color-scheme: dark)">
-            <img src="{{ $baseURL }}assets/images/logo.svg" width="80" role="img" alt="Logo {{ if .Site.Params.organisation }}{{ .Site.Params.organisation }}{{ else }}{{ .Site.Title }}{{ end }}">
-          </picture>
+          {{ if .Site.Params.organisation }}{{ .Site.Params.organisation }}{{ else }}{{ .Site.Title }}{{ end }}
         </a>
       </div>
       <div class="flex h-full">
@@ -154,7 +148,6 @@
   {{- partial "debug/debug.html" (dict "context" .) -}}
   {{- end -}}
 
-  {{- end -}}
   <!-- CSS style file -->
   {{- $.Scratch.Set "isCSS" false -}}
   {{- $.Scratch.Set "isFONT" false -}}
