--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -49,7 +49,7 @@
   {{/* Union the both CSS */}}
   {{- $.Scratch.Add "css" (slice $styles $main $layout) -}}
   {{- $style := ($.Scratch.Get "css") | resources.Concat "styles.css" -}}
-  
+
   {{/* Optimise (purge, concat) if production */}}
   {{- if not (and (hugo.IsServer) (eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production"))) -}}
   {{- $style := $style | postCSS (dict "config" "postcss.config.js") -}}
@@ -113,25 +113,23 @@
 </head>
 <body class="hugo-{{ .Kind }} debug">
   <div class="skip-links" role="navigation">
-    <a href="#nav">{{ i18n "nav-skiplinks-menu" }}</a>
     <a href="#main">{{ i18n "nav-skiplinks-content" }}</a>
-    <a href="#footer">{{ i18n "nav-skiplinks-footer" }}</a>
   </div>
   {{ partialCached "utils/css.html" (dict "context" . "filefolder" "object" "filename" "form") "form" }}
   <header id="header" class="header" aria-label="{{ i18n "aria-label-header" }}">
     {{- $baseURL := $.Site.BaseURL | default "/" -}}
-    <div class="fg-wrapper grid-main align-items-stretch pb-1">
-      <div class="flex align-items-center">
+    <div class="fg-wrapper grid-main align-items-stretch mb-2 bg-body">
+      <div class="flex align-items-center p-1">
         <a href="{{ absLangURL "" }}" title="Accueil - {{ if .Site.Params.organisation }}{{ .Site.Params.organisation }}{{ else }}{{ .Site.Title }}{{ end }}" rel="home" class="site-logo">
           {{ if .Site.Params.organisation }}{{ .Site.Params.organisation }}{{ else }}{{ .Site.Title }}{{ end }}
         </a>
       </div>
       <div class="flex h-full">
-        <nav class="nav-language grid-right">
+        <nav class="nav-language grid-right p-1">
         {{- if .IsTranslated }}
           <ul class="list-unstyled">
             {{ range .Translations }}
-            <li class="padding-block">
+            <li class="pr-1">
               <a href="{{ .Permalink }}">{{ strings.ToUpper .Lang }}</a>
             </li>
             {{ end }}
