--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,7 +114,7 @@ header {
   z-index: 100;
 }
 
-.site-logo {
+.site-logo,.site-logo:visited {
   font-size: clamp(1.25rem, 0.61vw + 1.1rem, 1.50rem);
   line-height: calc(8px + 2ex);
   font-weight: 700;
