--- a/assets/css/object/form.css
+++ b/assets/css/object/form.css
@@ -188,12 +188,14 @@ input[type=button]:active {
 
 .form-help {
   font-style: italic;
+  font-size: 1rem;
 }
 
 .form-control {
   padding: 0.2em 0 0.4em;
   font-family: font-family: var(--font-base);;
   justify-content: start;
+  font-size: 1rem;
   font-weight: bold;
   line-height: 1;
   display: grid;
@@ -206,7 +208,8 @@ fieldset.form-radio legend {
   padding: 0.3em 0;
   min-height: 1.5em;
   font-family: var(--font-base);
-  font-size: 1rem;
+  font-size: 1.1rem;
+  line-height: 1.25;
   width: 100%;
   border: 0;
 }
