--- a/assets/css/object/buttons.css
+++ b/assets/css/object/buttons.css
@@ -13,7 +13,7 @@ input[type="submit"],.btn,::file-selector-button {
   justify-content: center;
   box-sizing: border-box;
   margin: var(--baseline,1.5em);
-  padding: calc(var(--baseline,1.5em) / 1.5) calc(var(--baseline,1.5em) * 2);
+  padding: calc(var(--baseline,1.5em) / 1.5) calc(var(--baseline,1.5em));
   font-size: 1.3em;
   cursor: pointer;
   transition: background 0.45s;
