--- a/layouts/partials/form/main.html
+++ b/layouts/partials/form/main.html
@@ -69,7 +69,7 @@
 
           const champsVides = compterChampsVides();
           console.log(champsVides)
-          const msg = `Vous avez laissez ${champsVides} questions sans réponse.\n\nÊtes-vous sûr de vouloir soumettre le formulaire ?`
+          const msg = `Vous avez laissé ${champsVides} questions sans réponse.\n\nÊtes-vous sûr de vouloir soumettre le formulaire ?`
           const confirmation = confirm(msg);
 
           if (confirmation) {
